--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "faker": "^5.5.3",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "morgan": "~1.9.1",
